implemented_grammar.ebnf
<program> ::= { <declaration> }

<declaration> ::= <variable_declaration> 
                | <array_declaration> 
                | <function_declaration> 

<variable_declaration> ::= <data_type> <identifier> "=" <exp>  { "," <identifier> "=" <exp> } ";" 
                        | <data_type> <identifier> { "," <identifier> } ";" 

<array_declaration> ::= <data_type> <identifier> "[" [ <const> ] "]" [ "=" "{" [ <argument_list> ] "}" ] ";"

<function_declaration> ::= <data_type> <identifier> "(" <parameter_list> ")" ( <block> | ";" )

<parameter_list> ::= ["void"] |  <data_type> <identifier> { "," <data_type> <identifier> }

<argument_list> ::= <exp> { "," <exp> }

<data_type> ::= "int" | "float" | "char" | "bool"

<block> ::= "{" <block_item_list> "}"

<block_item_list> ::= { <block_item> }

<block_item> ::= <statement> | <variable_declaration> | <array_declaration>

<statement> ::= "return" <exp> ";"
              | <exp> ";"
              | ";"
              | <block>
              | <for_statement>
              | "while" "(" <factor> ")" <block>
              | <if_statement>
              | <input_statement>
              | <outout_statement>

<for_statement> ::= "for" "(" (<variable_declaration> | <array_declaration> | <exp> ";") <exp> ";" <exp> ")" <block>  

<input_statement> ::= "scanf" "(" <string> { "," "&" <identifier> } ")" ";"

<output_statement> ::= "printf" "(" <string> ")" ";"
                                    | "printf" "(" <string> "," <factor> ")" ";"
                                    | "printf" "(" <string> { "," <factor> } ")" ";"
                                    | "printf" "(" <identifier> ")" ";"

<if_statement> ::= "if" "(" <factor> ")" <block> [<else-clause>]

<else-clause> ::= "else" <block>
                | "else" <if_statement>

<exp> ::= <logical_or_exp> | (<identifier> | <identifier> "[" <const> "]" ) "=" <exp>  

<logical_or_exp> ::= <logical_and_exp> | <logical_or_exp>  "||" <logical_and_exp> 

<logical_and_exp> ::= <power_exp> | <logical_and_exp>  "&&" <power_exp>

<power_exp> ::= <factor> | <factor> "^" <power_exp> 

<factor> ::= <const>
            | <identifier>
            | "(" <exp> ")"
            | <identifier> "(" [ <argument_list> ] ")"
            | <identifier> "[" <const> "]" 

<const> ::= <int> | <float> | <char> | <bool>

<string> ::= STRING
<identifier> ::= IDENTIFIER
<int> ::= INTEGER_LITERAL
<float> ::= FLOAT_LITERAL
<char> ::= CHARACTER_LITERAL
<bool> ::= "true" | "false"
